A couple more findbugs complaints.